--- a/KiemTra_NguyenMinhNhat/Views/HocPhan/Index.cshtml
+++ b/KiemTra_NguyenMinhNhat/Views/HocPhan/Index.cshtml
@@ -5,7 +5,7 @@
     Layout = "~/Views/Shared/_LayoutTest01.cshtml";
 }
 
-<h2>Index</h2>
+<h2>DANH SÁCH HỌC PHẦN</h2>
 
 <table class="table">
     <tr>
