--- a/KiemTra_NguyenMinhNhat/Views/SinhVien/Delete.cshtml
+++ b/KiemTra_NguyenMinhNhat/Views/SinhVien/Delete.cshtml
@@ -41,7 +41,7 @@
         </dt>
 
         <dd>
-            <img src="@Html.DisplayNameFor(model => model.Hinh)" width="300" height="400" />
+            <img src="@Html.DisplayFor(model => model.Hinh)" width="300" height="400" />
         </dd>
 
         <dt>
