--- a/KiemTra_NguyenMinhNhat/Views/HocPhan/HocPhanPartial.cshtml
+++ b/KiemTra_NguyenMinhNhat/Views/HocPhan/HocPhanPartial.cshtml
@@ -1,3 +1,3 @@
 ﻿<a class="getstarted scrollto active" href="@Url.Action("HocPhan", "HocPhan")" style="font-weight: bold; text-decoration: none">
-    Đăng ký (@ViewBag.TongSoLuongSanPham)
+    Đăng ký (@ViewBag.TongSoLuongHocPhan)
 </a>
