--- a/KiemTra_NguyenMinhNhat/Views/Shared/_LayoutTest01.cshtml
+++ b/KiemTra_NguyenMinhNhat/Views/Shared/_LayoutTest01.cshtml
@@ -32,7 +32,7 @@
         @RenderBody()
         <hr />
         <footer>
-            <p>&copy; @DateTime.Now.Year - Họ và tên sinh viên thực hiện</p>
+            <p>&copy; @DateTime.Now.Year - Nguyễn Minh Nhật</p>
         </footer>
     </div>
 
